# GraphicsUtility

./: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
include/: colour.hpp  graphics_utility.hpp
include/sdl3/: sdl3_context.hpp  sdl3_graphics_utility.hpp  sdl3_utility.hpp
include/sdl3/triangle/: sdl3_triangle.hpp  sdl3_triangle_settings.hpp
src/: graphics_utility.cpp
src/sdl3/: sdl3_graphics_utility.cpp  sdl3_utility.cpp
src/sdl3/triangle/: sdl3_triangle.cpp
